--- a/Practical Assignment/MasterPage.css
+++ b/Practical Assignment/MasterPage.css
@@ -1,7 +1,7 @@
 ﻿#TopMenuBar {
     width: 573px;
     float: right;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
     #TopMenuBar tr {
@@ -17,17 +17,13 @@
     }
 
     #TopMenuBar a {
-        display: block;
-        padding: 28px 10px 0px;
-        height: 50px;
-        font-family: Arial;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 18px;
+        display: inline-block;
+        color: rgb(90,90,90);
+        text-align: center;
+        padding: 30px 32px;
+        padding-right: 50px;
         text-decoration: none;
-        font-weight: normal;
-        background: none;
-        color: #20C8F4;
+        font-size: 18px
     }
 
         #TopMenuBar a:link, #TopMenuBar a:visited {
@@ -45,5 +41,5 @@
         }
 
         #TopMenuBar a:hover, #TopMenuBar a:active {
-            color: #fff;
+            background-color: rgb(150,150,150);
         }
