--- a/Practical Assignment/Gallery.css
+++ b/Practical Assignment/Gallery.css
@@ -6,9 +6,17 @@
     text-align: center;
     display: inline-block;
     font-size: 16px;
+    font-weight: 600;
+    font-family: Tahoma;
 }
     .Button:hover {
         background-color: rgb(54,118,232);
         color: white;
         border: thick;
+    }
+    
+    .Img
+    {
+        width: 500px;
+        height: 250px;
     }
