--- a/Practical Assignment/MasterPage.css
+++ b/Practical Assignment/MasterPage.css
@@ -1,7 +1,4 @@
-﻿.Logo {
-    margin-left: 20%;
-}
-
+﻿
 .TopMenuBar {
     margin-top:-80px;
     margin-left: auto;
@@ -27,3 +24,6 @@
         color: rgb(255,255,255);
     }
 
+body {
+    background-color:burlywood;
+}
