--- a/Practical Assignment/MasterPage.Master
+++ b/Practical Assignment/MasterPage.Master
@@ -14,8 +14,8 @@
 
     <form id="form1" runat="server">
         
-       <% int i = 0;
-          if (i == 0)
+       <% int i = 1;
+          if (Session["Bar"] == "C" )
           { %>
         <div > 
             <asp:HyperLink NavigateUrl="~/HomePage.aspx" ID="Logo" runat="server" ImageUrl="~/Sample Images/Alzenda_Logo.png" Style="margin-left: 20%" ImageHeight="10%" ImageWidth="5%" />
@@ -38,7 +38,7 @@
                 <Items>
                     <asp:MenuItem NavigateUrl="~/HomePage.aspx" Text="Home Page" Value="Home Page"/>
                     <asp:MenuItem NavigateUrl="~/AboutUs.aspx" Text="About Us" Value="About Us"/>
-                    <asp:MenuItem NavigateUrl="~/ManageArt.aspx" Text="Manage Art" Value="Manage Art"/>
+                    <asp:MenuItem NavigateUrl="~/SellArt.aspx" Text="Manage Art" Value="Manage Art"/>
                     <asp:MenuItem NavigateUrl="~/Profile.aspx" Text="Profile" Value="Profile"/>
                 </Items>
             </asp:Menu>
