--- a/Practical Assignment/MasterPage.css
+++ b/Practical Assignment/MasterPage.css
@@ -1,4 +1,8 @@
-﻿
+﻿.header {
+    background-color: black;
+    padding: 10px;
+    margin: -10px -10px 0px -10px
+}
 .TopMenuBar {
     margin-top:-80px;
     margin-left: auto;
@@ -25,5 +29,11 @@
     }
 
 body {
-    background-color:burlywood;
+    background-color:white;
+}
+
+.footer {
+    margin:0px -10px 0px -10px;
+    padding:2%;
+    background-color:gold;
 }
