--- a/Practical Assignment/HomePage.css
+++ b/Practical Assignment/HomePage.css
@@ -109,6 +109,7 @@
     position: relative;
     text-align: center;
     color: white;
+    max-width: inherit;
 }
 
 
@@ -118,4 +119,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+a {
+    font-size: 36px;
+    font-style: normal;
+    color: #FFFFFF;
+}
 
+a:hover {
+    color: #717171;
+}
