--- a/Practical Assignment/MasterPage.css
+++ b/Practical Assignment/MasterPage.css
@@ -1,7 +1,7 @@
 ﻿.header {
     background-color: black;
     padding: 10px;
-    margin: -10px -10px 0px -10px
+    margin: -8px -8px 0px -8px
 }
 .TopMenuBar {
     margin-top:-80px;
@@ -29,11 +29,12 @@
     }
 
 body {
-    background-color:white;
+    background-image: url("../Sample Images/background.jpg");
+    background-repeat:repeat;
 }
 
 .footer {
-    margin:0px -10px 0px -10px;
-    padding:2%;
+    margin:0px -8px -8px -8px;
+    padding:1% 5% 1% 5%;
     background-color:gold;
 }
