--- a/Practical Assignment/MasterPage.Master
+++ b/Practical Assignment/MasterPage.Master
@@ -13,25 +13,35 @@
 <body>
 
     <form id="form1" runat="server">
-        
-       <% int i = 1;
-          if (Session["Bar"] == "C")
-          { %>
-        <div class="header"> 
-            <asp:HyperLink NavigateUrl="~/HomePage.aspx" ID="Logo" runat="server" ImageUrl="~/Sample Images/Alzenda_Logo.png" Style="margin-left: 20%;" ImageHeight="10%" ImageWidth="5%" />
-            <asp:Menu CssClass="TopMenuBar" ID="TopMenuBar" runat="server" RenderingMode="Table" Orientation="Horizontal" >
-                <Items>
-                    <asp:MenuItem NavigateUrl="~/HomePage.aspx" Text="Home Page" Value="Home Page"/>
-                    <asp:MenuItem NavigateUrl="~/AboutUs.aspx" Text="About Us" Value="About Us"/>
-                    <asp:MenuItem NavigateUrl="~/Gallery.aspx" Text="Gallery" Value="Gallery"/>
-                    <asp:MenuItem NavigateUrl="~/Profile.aspx" Text="Profile" Value="Profile"/>
-                </Items>
+       <% 
+           if (Session["Bar"] == "C" || Session["Bar"] == null || Session["Value"] == "0")
+           {
+               if (Session["Bar"] == null || Session["Value"] == "0"){%>
+               <a href="SignUp.aspx" style="float:right; color:aliceblue"> | Register</a> <a href="SignIn.aspx" style="float:right; color:aliceblue">Log in </a>
+            <%} else{%>
+                     <a href="Profile.aspx">
+                         <asp:Label ID="CustomerUsername" runat="server" Text="Label" style="float:right; color:aliceblue"></asp:Label></a>
+               <%} %>
 
-            </asp:Menu>
+            <div class="header"> 
+                <asp:HyperLink NavigateUrl="~/HomePage.aspx" ID="Logo" runat="server" ImageUrl="~/Sample Images/Alzenda_Logo.png" Style="margin-left: 20%;" ImageHeight="10%" ImageWidth="5%" />
+                <asp:Menu CssClass="TopMenuBar" ID="TopMenuBar" runat="server" RenderingMode="Table" Orientation="Horizontal" >
+                    <Items>
+                        <asp:MenuItem NavigateUrl="~/HomePage.aspx" Text="Home Page" Value="Home Page"/>
+                        <asp:MenuItem NavigateUrl="~/AboutUs.aspx" Text="About Us" Value="About Us"/>
+                        <asp:MenuItem NavigateUrl="~/Gallery.aspx" Text="Gallery" Value="Gallery"/>
+                        <asp:MenuItem NavigateUrl="~/Profile.aspx" Text="Profile" Value="Profile"/>
+                    </Items>
+
+                </asp:Menu>
+
+            
 
         </div> 
         <%}
           else{ %>
+        <a href="Profile.aspx">
+                         <asp:Label ID="ArtistUsername" runat="server" Text="Label" style="float:right; color:aliceblue"></asp:Label></a>
         <div class="header"> 
             <asp:HyperLink NavigateUrl="~/HomePage.aspx" ID="HyperLink1" runat="server" ImageUrl="~/Sample Images/Alzenda_Logo.png" Style="margin-left: 20%" ImageHeight="10%" ImageWidth="5%" />
             <asp:Menu CssClass="TopMenuBar" ID="Menu2" runat="server" RenderingMode="Table" Orientation="Horizontal" >
@@ -42,6 +52,9 @@
                     <asp:MenuItem NavigateUrl="~/Profile.aspx" Text="Profile" Value="Profile"/>
                 </Items>
             </asp:Menu>
+
+            
+
         </div> 
         <%} %>
         <br/>
