--- a/Practical Assignment/MasterPage.Master
+++ b/Practical Assignment/MasterPage.Master
@@ -8,6 +8,7 @@
     <!--bootstarp css -->
     <link href="bootstrap css/bootstrap.css" rel="stylesheet" />
     <link href="bootstrap css/bootstrap.min.css" rel="stylesheet" />
+    
     <!-- css -->
     <link href="MasterPage.css" rel="stylesheet" type="text/css" />
    
@@ -25,13 +26,14 @@
            if (Session["Bar"] == "C" || Session["Bar"] == null || Session["Value"] == "0")
            {
                if (Session["Bar"] == null || Session["Value"] == "0"){%>
+               <div class="header">
                <a href="SignUp.aspx" style="float:right; color:aliceblue; font-size: 16px;"> | Register</a> <a href="SignIn.aspx" style="float:right; color:aliceblue; font-size: 16px">Log in </a>
             <%} else{%>
                      <a href="Profile.aspx">
-                         <asp:Label ID="CustomerUsername" runat="server" Text="Label" style="float:right; color:aliceblue"></asp:Label></a>
+                         <asp:Label ID="CustomerUsername" runat="server" Text="Label" style="float:right; color:aliceblue; font-size: 16px;"></asp:Label></a>
                <%} %>
 
-            <div class="header"> 
+             
                <asp:HyperLink NavigateUrl="~/HomePage.aspx" ID="Logo" runat="server" ImageUrl="~/Sample Images/Alzenda_Logo.png" Style="margin-left: 20%;" ImageHeight="10%" ImageWidth="5%" />
                 <asp:Menu CssClass="TopMenuBar" ID="TopMenuBar" runat="server" RenderingMode="Table" Orientation="Horizontal" >
                     <Items>
@@ -47,9 +49,10 @@
         </div> 
         <%}
           else{ %>
-        <a href="Profile.aspx">
-                         <asp:Label ID="ArtistUsername" runat="server" Text="Label" style="float:right; color:aliceblue; font-size: 16px"></asp:Label></a>
-        <div class="header"> 
+           <div class="header">
+           <a href="Profile.aspx">
+            <asp:Label ID="ArtistUsername" runat="server" Text="Label" style="float:right; color:aliceblue; font-size: 16px"></asp:Label></a>
+         
             <asp:HyperLink NavigateUrl="~/HomePage.aspx" ID="HyperLink1" runat="server" ImageUrl="~/Sample Images/Alzenda_Logo.png" Style="margin-left: 20%" ImageHeight="10%" ImageWidth="5%" />
             <asp:Menu CssClass="TopMenuBar" ID="Menu2" runat="server" RenderingMode="Table" Orientation="Horizontal" >
                 <Items>
@@ -58,9 +61,7 @@
                     <asp:MenuItem NavigateUrl="~/SellArt.aspx" Text="Manage Art" Value="Manage Art"/>
                     <asp:MenuItem NavigateUrl="~/Profile.aspx" Text="Profile" Value="Profile"/>
                 </Items>
-            </asp:Menu>
-
-            
+            </asp:Menu>           
 
         </div> 
         <%} %>
