--- a/Practical Assignment/MasterPage.css
+++ b/Practical Assignment/MasterPage.css
@@ -3,7 +3,6 @@
     padding: 10px;
     margin: -8px -8px 0px -8px
 }
-
 .TopMenuBar {
     margin-top:-80px;
     margin-left: auto;
@@ -16,6 +15,7 @@
     }
 
     .TopMenuBar a {
+        border-radius: 25px; /*not checked*/
         display: inline-block;
         color: rgb(100,149,237);
         text-align: center;
