--- a/Practical Assignment/MasterPage.Master
+++ b/Practical Assignment/MasterPage.Master
@@ -24,13 +24,13 @@
     <form id="form1" runat="server">
        <% 
            if (Session["Bar"] == "C" || Session["Bar"] == null || Session["Value"] == "0")
-           {
-               if (Session["Bar"] == null || Session["Value"] == "0"){%>
+           {%>
                <div class="header">
+            <% if (Session["Bar"] == null || Session["Value"] == "0"){%>               
                <a href="SignUp.aspx" style="float:right; color:aliceblue; font-size: 16px;"> | Register</a> <a href="SignIn.aspx" style="float:right; color:aliceblue; font-size: 16px">Log in </a>
             <%} else{%>
                    <asp:LinkButton ID="ltnButton1" runat="server" style="float:right; color:aliceblue; font-size: 16px" OnClick="ltnButton1_Click">Log out</asp:LinkButton>
-                     <a href="Profile.aspx"><asp:Label ID="CustomerUsername" runat="server" Text="Label" style="float:right; color:aliceblue"></asp:Label></a> 
+                     <a href="Profile.aspx"><asp:Label ID="CustomerUsername" runat="server" Text="Label" style="float:right; color:aliceblue;font-size:16px"></asp:Label></a> 
                      
                <%} %>
 
