--- a/Practical Assignment/MasterPage.Master
+++ b/Practical Assignment/MasterPage.Master
@@ -59,7 +59,8 @@
                 <Items>
                     <asp:MenuItem NavigateUrl="~/HomePage.aspx" Text="Home Page" Value="Home Page"/>
                     <asp:MenuItem NavigateUrl="~/AboutUs.aspx" Text="About Us" Value="About Us"/>
-                    <asp:MenuItem NavigateUrl="~/SellArt.aspx" Text="Manage Art" Value="Manage Art"/>
+                    <asp:MenuItem NavigateUrl="~/SellArt.aspx" Text="Sell Art" Value="Sell Art"/>
+                    <asp:MenuItem NavigateUrl="~/GalleryArtist.aspx" Text="Manage Art" Value="Manage Art" />
                     <asp:MenuItem NavigateUrl="~/Profile.aspx" Text="Profile" Value="Profile"/>
                 </Items>
             </asp:Menu>           
