--- a/Practical Assignment/MasterPage.css
+++ b/Practical Assignment/MasterPage.css
@@ -5,8 +5,8 @@
 }
 .TopMenuBar {
     margin-top:-80px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 120px;
+    
 }
 
     .TopMenuBar tr {
