--- a/Practical Assignment/MasterPage.Master
+++ b/Practical Assignment/MasterPage.Master
@@ -17,7 +17,14 @@
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+
+     <style type="text/css">
+        body{
+            font-family: sans-serif;
+        }
+    </style>
 </head>
+
 
 <body>
 
