--- a/Practical Assignment/Gallery.css
+++ b/Practical Assignment/Gallery.css
@@ -30,9 +30,8 @@
 .container {
     display: flex;
     align-items: flex-start;
-    margin-top: 2%;
-    margin-left: 21.5%;
-    margin-bottom: 2%;
+    margin-left:7%;
+    padding-top :5%;
     
 }
 
