--- a/Practical Assignment/Gallery.css
+++ b/Practical Assignment/Gallery.css
@@ -50,7 +50,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    background-color :lightgray;
+    background-color: lightgray;
+    width:1200px ; font-size:16px ; margin-left :13.5% ;margin-right :auto; margin-bottom:5% ; background-color:none;
 }
 
 
