--- a/Practical Assignment/MasterPage.Master
+++ b/Practical Assignment/MasterPage.Master
@@ -69,6 +69,7 @@
                     <asp:MenuItem NavigateUrl="~/HomePage.aspx" Text="Home Page" Value="Home Page"/>
                     <asp:MenuItem NavigateUrl="~/AboutUs.aspx" Text="About Us" Value="About Us"/>
                     <asp:MenuItem NavigateUrl="~/SellArt.aspx" Text="Sell Art" Value="Sell Art"/>
+                    <asp:MenuItem NavigateUrl="~/Gallery.aspx" Text="Gallery" Value="Gallery" />
                     <asp:MenuItem NavigateUrl="~/GalleryArtist.aspx" Text="Manage Art" Value="Manage Art" />
                     <asp:MenuItem NavigateUrl="~/CustomerArtManagement.aspx" Text="Sell History" Value="Profile"/>
                     <asp:MenuItem NavigateUrl="~/Profile.aspx" Text="Profile" Value="Profile"/>                    
