--- a/Practical Assignment/Gallery.css
+++ b/Practical Assignment/Gallery.css
@@ -2,6 +2,7 @@
     border-color: #4D94FF;
     background-color: white;
     color: #284E98;
+    margin-left:4%;
 }
     .Button:hover {
         background-color: rgb(54,118,232);
@@ -10,48 +11,51 @@
     }
 
 .Img {
-    width: 360px;
-    height: 280px;
+    width: 260px;
+    height: 200px;
     border: 2px solid black;
-    background-color: #C4A484;
+    background-color: lightgrey;
     padding: 5%;
 }
 .frame {
-    width: 360px;
-    height: 280px;
+    width: 260px;
+    height: 200px;
     border: 2px solid black;
     border-top: none;
     padding: 5%;
-    background-color: #C4A484;
+    background-color: lightgrey;
+    font-size:small;
+    font-weight : bold;
 }
 
 .container {
     display: flex;
     align-items: flex-start;
-    margin-left:9.5%;
+    margin-left:5%;
+    margin-bottom:3%;
     padding-top :5%;
     
 }
 
 .linkBtn {
-    margin-right: 16%;
-    font-size: large;
+    font-weight: bold;
     text-decoration: none;
-    border: 1px solid #4D94FF  ;
-    background-color: white;
-    color: #284E98;
-    padding: 1%;
-    margin-bottom:2%
+    border: 1px solid #4D94FF;
+    background-color: ghostwhite;
+    text-align: center;
+    color: rgb(100,149,237);
+    width: 800px;
+    height: 50px;
 }
 
 .background {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeex9YEi5jgdafJ-LGHjoCJ0rcN9icpvDYcQ&usqp=CAU");
+    
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    background-color: lightgray;
-    width:1200px ; font-size:16px ; margin-left :13.5% ;margin-right :auto; margin-bottom:5% ; background-color:none;
+
+    width:1800px ; font-size:16px  ;margin-right :auto; margin-bottom:5% ; background-color:none;
 }
 
 
