--- a/Practical Assignment/MasterPage.css
+++ b/Practical Assignment/MasterPage.css
@@ -30,8 +30,11 @@
     }
 
 body {
-    background-image: url("../Sample Images/background.jpg");
-    background-repeat:repeat;
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeex9YEi5jgdafJ-LGHjoCJ0rcN9icpvDYcQ&usqp=CAU");
+    background-repeat: repeat;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .footer {
