--- a/Practical Assignment/MasterPage.css
+++ b/Practical Assignment/MasterPage.css
@@ -30,7 +30,7 @@
     }
 
 body {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeex9YEi5jgdafJ-LGHjoCJ0rcN9icpvDYcQ&usqp=CAU");
+    background-image:url('Sample Images/background1.jpg');
     background-repeat: repeat;
     background-position: center;
     background-repeat: no-repeat;
